# driftguard

./: .gitignore  README.md  pyproject.toml
datasets/: AGENT.md
exp/exp/: c_0.json  c_1.json  c_2.json  c_3.json
scripts/: build_dataset_meta.py  mk_expdir.sh  pretrain copy.py  pretrain.py
src/driftguard/: cli.py  config.py  exp.py  launch.py  recorder.py
src/driftguard/data/: __init__.py  domain_dataset.py  drift_controller.py  drift_events_generator.py  drift_simulation.py  service.py
src/driftguard/federate/: observation.py  params.py  retrain_config.py
src/driftguard/federate/client/: client.py
src/driftguard/federate/server/: cluster.py  fed_server.py  retrain_strategy.py  state.py  sync.py
src/driftguard/model/: dataset.py  utils.py  vit.py
src/driftguard/model/c_resnet/: model.py
src/driftguard/model/c_vit/: model.py
src/driftguard/model/training/: trainer.py
src/driftguard/rpc/: proxy.py  rpc.py
tests/: _vit.py  test_cluster.py  test_fedserver.py  test_trainer.py  test_trainer_pacs.py
tests/data/: test_drift_events_generator.py
