[project]
name = "driftguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yzh", email = "yzh.han@outlook.com" }
]
requires-python = "~=3.14.2"
dependencies = []

[project.scripts]
driftguard = "driftguard.cli:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
