[project]
name = "driftguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yzh", email = "yzh.han@outlook.com" }
]
requires-python = "~=3.14.2"
dependencies = [
    "numpy>=2.4.0",
    "scikit-learn>=1.8.0",
    "timm>=1.0.24",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[project.scripts]
driftguard = "driftguard.cli:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "gdown>=5.2.1",
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
